fix clipping on handheld width

--- a/src/scss/partials/pages/_chats.scss
+++ b/src/scss/partials/pages/_chats.scss
@@ -21,6 +21,10 @@
       display: flex !important;
       z-index: 1;
     }
+
+    #main-columns {
+      overflow-x: clip;
+    }
   }
 
   @include respond-to(not-handhelds) {
